fix: jwt verification error message, swagger format and doc
